k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wip-planner-backend
  labels:
    app: wip-planner-backend
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: wip-planner-backend
    tier: backend
