k8s/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wip-planner-backend
  labels:
    app: wip-planner-backend
    tier: backend
spec:
  to:
    kind: Service
    name: wip-planner-backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
